--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,9 @@ dependencies:
 - text
 - directory >= 1.3.6.0 && < 2
 - monad-loops
+- vector
+- bytestring
+- cassava
 
 library:
   source-dirs: src
