--- a/logger.cabal
+++ b/logger.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a2ff25a0c65c82d1c37184af93bf09c3681438e0e5651f3dd1ba357e88f0ce4e
+-- hash: 5b2a8884f0cd69569059125aa40a296d3caf36830e1150132a757650f55262a2
 
 name:           logger
 version:        0.1.0.0
@@ -38,6 +38,7 @@ library
     , bytestring
     , cassava
     , directory >=1.3.6.0 && <2
+    , hinduce-missingh
     , monad-loops
     , text
     , vector
@@ -56,6 +57,7 @@ executable logger-exe
     , bytestring
     , cassava
     , directory >=1.3.6.0 && <2
+    , hinduce-missingh
     , logger
     , monad-loops
     , text
@@ -76,6 +78,7 @@ test-suite logger-test
     , bytestring
     , cassava
     , directory >=1.3.6.0 && <2
+    , hinduce-missingh
     , logger
     , monad-loops
     , text
